# luminar

./: .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.sh
.do/: app.yaml
.github/workflows/: ci.yml
backend/: main.py
backend/concurrency/: dht_coordinator.py  stream_manager.py
backend/events/: bus.py  types.py  websocket.py
backend/fault/: injector.py
backend/gossip/: engine.py  scoring.py
backend/metrics/: collector.py
backend/scenarios/: __init__.py  library.py  runner.py  types.py
backend/simulation/: clock.py  engine.py  node_pool.py
backend/templates/: index.html
backend/topology/: manager.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend-ng  nginx.conf
docs/: 00-PROJECT-REPORT.md  01-INTRODUCTION.md  02-LITERATURE-REVIEW.md  03-SYSTEM-ARCHITECTURE.md  04-BACKEND-DESIGN.md  05-FRONTEND-DESIGN.md  06-API-REFERENCE.md  07-ALGORITHMS-AND-PROTOCOLS.md  08-TESTING-STRATEGY.md  09-DEPLOYMENT-GUIDE.md  10-RESULTS-AND-ANALYSIS.md  11-CONCLUSION.md  architecture.md  backend.md  deployment.md  protocols.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-v2/: README.md  package.json  vite.config.ts
frontend-v2/src/: app.css
frontend/src/: app.ts  culori.d.ts  format.ts  palette.ts  store.ts  style.css  types.ts
tests/: test_dht_coordinator.py  test_event_bus.py  test_fault_injector.py  test_gossip_engine.py  test_gossip_scoring.py  test_stream_manager.py  test_topology.py
(+31 files in other folders)
