[project]
name = "lumina-p2p"
version = "0.1.0"
description = "Local-first, replay-capable P2P network simulator with real-time visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "trio>=0.27.0",
    "trio-websocket>=0.11.0",
    "libp2p>=0.6.0",
    "networkx>=3.4",
    "pydantic>=2.10.0",
    "orjson>=3.10.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "jinja2>=3.1.6",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-trio>=0.8",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
trio_mode = true
testpaths = ["tests"]
